--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ parso~=0.8.1
 jedi~=0.18.0
 pytz~=2018.7
 QtPy~=1.9.0
- # pywin32~=300 # This requirement causes Dependabot to fail
+pywin32~=300
 setuptools~=45.2.0
 scipy~=1.1.0
 matplotlib~=3.0.2
